--- a/src/Rookie.Ecom.Customer/Pages/Index.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Index.cshtml
@@ -2,9 +2,109 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
-}
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+}
+<style>
+    .flex-container{
+        display:flex;
+        flex-wrap:wrap;
+        flex-direction:row;
+        align-content:space-between   !important; 
+    }
+</style>
+<div class="banner">
+
 </div>
+<ul class="flex-container">
+
+    <li class="d-flex mt-5 flex-grow-1" >
+        <div class="card p-3 bg-white"><i class="fa fa-apple"></i>
+            <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
+                <div>
+                    <h4>Believing is seeing</h4>
+                    <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
+        </div>
+    </li>
+    <li class="d-flex  mt-5 flex-grow-1">
+        <div class="card p-3 bg-white"><i class="fa fa-apple"></i>
+            <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
+                <div>
+                    <h4>Believing is seeing</h4>
+                    <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
+        </div>
+    </li>
+    <li class="d-flex mt-5 flex-grow-1">
+        <div class="card p-3 bg-white"><i class="fa fa-apple"></i>
+            <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
+                <div>
+                    <h4>Believing is seeing</h4>
+                    <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
+        </div>
+    </li>
+    <li class="d-flex mt-5 flex-grow-1">
+        <a>
+        <div class="card p-3 bg-white"><i class="fa fa-apple"></i>
+            <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
+                <div>
+                    <h4>Believing is seeing</h4>
+                    <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
+        </div>
+        </a>
+    </li>
+    <li class="d-flex mt-5 flex-grow-1">
+        <a>
+        <div class="card p-3 bg-white"><i class="fa fa-apple"></i>
+            <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
+                <div>
+                    <h4>Believing is seeing</h4>
+                    <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
+        </div>
+        </a>
+    </li>
+    
+</ul>
+
+
+       
+
