- Fix Header - Search Sản phẩm

--- a/src/Rookie.Ecom.Customer/Pages/Shared/_Layout.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
         </div>*@ <!-- Header Main -->
         <div class="header_main">
             <div class="container">
-                <div class="row">
+                <div class="row center--align-item">
                     <!-- Logo -->
                     <div class="col-lg-2 col-sm-3 col-3 order-1">
                         <div class="logo_container">
@@ -70,8 +70,8 @@
                         <div class="header_search">
                             <div class="header_search_content">
                                 <div class="header_search_form_container">
-                                    <form action="#" class="header_search_form clearfix"> 
-                                        <input type="text" class="header_search_input" placeholder="Search for products...">
+                                    <form action="/customer" class="header_search_form clearfix" method="get"> 
+                                        <input type="text" name="keyword" class="header_search_input" placeholder="Search for products...">
                                          <button type="submit" class="header_search_button trans_300" value="Submit"><img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560918770/search.png" alt=""></button>
                                     </form>
                                 </div>
@@ -252,7 +252,7 @@
             </div>
         </div>
     </header>
-    <div style="height: 700px"> </div>
+    @*<div style="height: 700px"> </div>*@
 </div>
     <div class="container">
         <main role="main" class="pb-3">
