+ ListProduct, ProdutDetail, SearchBYCate&Name

--- a/src/Rookie.Ecom.Customer/Pages/Index.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Index.cshtml
@@ -5,121 +5,47 @@
 
 
 }
-<style>
-    .flex-container {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        adivgn-content: space-between !important;
-    }
-</style>
-<div class="banner">
-</div>
+    
 
-
-
-
-
-@*<ul class="container">
-    <div class="row">
-
-        <div class=" mt-5 col-4">
-            <div class="card p-3 bg-white">
-                <i class="fa fa-apple"></i>
-                <div class="about-product text-center mt-2">
-                    <img src="https://i.imgur.com/3VTaSeb.png" width="300">
-                    <div>
-                        <h4>Bediveving is seeing</h4>
-                        <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
-                    </div>
-                </div>
-                <div class="stats mt-2">
-                    <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
-                    <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
-                    <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
-                </div>
-                <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
-            </div>
-        </div>
-        <div class="mt-5 col-4">
-            <div class="card p-3 bg-white">
-                <i class="fa fa-apple"></i>
-                <div class="about-product text-center mt-2">
-                    <img src="https://i.imgur.com/3VTaSeb.png" width="300">
-                    <div>
-                        <h4>Bediveving is seeing</h4>
-                        <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
-                    </div>
-                </div>
-                <div class="stats mt-2">
-                    <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
-                    <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
-                    <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
-                </div>
-                <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
-            </div>
-        </div>
-        <div class="mt-5 col-4">
-            <div class="card p-3 bg-white">
-                <i class="fa fa-apple"></i>
-                <div class="about-product text-center mt-2">
-                    <img src="https://i.imgur.com/3VTaSeb.png" width="300">
-                    <div>
-                        <h4>Bediveving is seeing</h4>
-                        <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
-                    </div>
-                </div>
-                <div class="stats mt-2">
-                    <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
-                    <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
-                    <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
-                </div>
-                <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
-            </div>
-        </div>
-        <div class="mt-5 col-4">
-            <a>
-                <div class="card p-3 bg-white">
-                    <i class="fa fa-apple"></i>
-                    <div class="about-product text-center mt-2">
-                        <img src="https://i.imgur.com/3VTaSeb.png" width="300">
-                        <div>
-                            <h4>Bediveving is seeing</h4>
-                            <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                <div id="header-carousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" style="height: 410px;">
+                                <img class="img-fluid" src="https://virtualbackgrounds.site/wp-content/uploads/2020/09/toy-story-andys-room-wallpaper.jpeg" alt="Image">
+                                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                    <div class="p-3" style="max-width: 700px;">
+                                        <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
+                                        <h3 class="display-4 text-white font-weight-semi-bold mb-4">Fashionable Dress</h3>
+                                        <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item" style="height: 410px;">
+                                <img class="img-fluid" src="img/carousel-2.jpg" alt="Image">
+                                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                    <div class="p-3" style="max-width: 700px;">
+                                        <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
+                                        <h3 class="display-4 text-white font-weight-semi-bold mb-4">Reasonable Price</h3>
+                                        <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
+                            <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                                <span class="carousel-control-prev-icon mb-n2"></span>
+                            </div>
+                        </a>
+                        <a class="carousel-control-next" href="#header-carousel" data-slide="next">
+                            <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                                <span class="carousel-control-next-icon mb-n2"></span>
+                            </div>
+                        </a>
                     </div>
-                    <div class="stats mt-2">
-                        <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
-                        <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
-                        <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
-                    </div>
-                    <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
-                </div>
-            </a>
-        </div>
-        <div class="mt-5 col-4">
-            <a>
-                <div class="card p-3 bg-white">
-                    <i class="fa fa-apple"></i>
-                    <div class="about-product text-center mt-2">
-                        <img src="https://i.imgur.com/3VTaSeb.png" width="300">
-                        <div>
-                            <h4>Bediveving is seeing</h4>
-                            <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
-                        </div>
-                    </div>
-                    <div class="stats mt-2">
-                        <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
-                        <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
-                        <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
-                    </div>
-                    <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
-                </div>
-            </a>
-        </div>
-    </div>
 
-</ul>*@
+    
+               <!-- Banner -->
+
+
 
 
 
