--- a/src/Rookie.Ecom.Customer/Pages/Index.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Index.cshtml
@@ -1,52 +1,153 @@
 ﻿@page
-@model IndexModel
+@model IndexModel 
 @{
     ViewData["Title"] = "Home page";
 
 
 }
-    
-
-                <div id="header-carousel" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active" style="height: 410px;">
-                                <img class="img-fluid" src="https://virtualbackgrounds.site/wp-content/uploads/2020/09/toy-story-andys-room-wallpaper.jpeg" alt="Image">
-                                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                    <div class="p-3" style="max-width: 700px;">
-                                        <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                        <h3 class="display-4 text-white font-weight-semi-bold mb-4">Fashionable Dress</h3>
-                                        <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item" style="height: 410px;">
-                                <img class="img-fluid" src="img/carousel-2.jpg" alt="Image">
-                                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                    <div class="p-3" style="max-width: 700px;">
-                                        <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                        <h3 class="display-4 text-white font-weight-semi-bold mb-4">Reasonable Price</h3>
-                                        <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
-                                    </div>
-                                </div>
-                            </div>
+    <div id="header-carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" style="height: 410px;">
+                    <img class="img-fluid" src="https://virtualbackgrounds.site/wp-content/uploads/2020/09/toy-story-andys-room-wallpaper.jpeg" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 700px;">
+                            <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
+                            <h3 class="display-4 text-white font-weight-semi-bold mb-4">Fashionable Dress</h3>
+                            <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
                         </div>
-                        <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
-                            <div class="btn btn-dark" style="width: 45px; height: 45px;">
-                                <span class="carousel-control-prev-icon mb-n2"></span>
-                            </div>
-                        </a>
-                        <a class="carousel-control-next" href="#header-carousel" data-slide="next">
-                            <div class="btn btn-dark" style="width: 45px; height: 45px;">
-                                <span class="carousel-control-next-icon mb-n2"></span>
-                            </div>
-                        </a>
                     </div>
+                </div>
+                <div class="carousel-item" style="height: 410px;">
+                    <img class="img-fluid" src="img/carousel-2.jpg" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 700px;">
+                            <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
+                            <h3 class="display-4 text-white font-weight-semi-bold mb-4">Reasonable Price</h3>
+                            <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
+                <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                    <span class="carousel-control-prev-icon mb-n2"></span>
+                </div>
+            </a>
+            <a class="carousel-control-next" href="#header-carousel" data-slide="next">
+                <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                    <span class="carousel-control-next-icon mb-n2"></span>
+                </div>
+            </a>
+        </div>
 
     
                <!-- Banner -->
+    <div class="container-fluid pt-5">
+        <div class="text-center mb-4">
+            <h2 class="section-title px-5"><span class="px-2">Category</span></h2>
+        </div>
+        <div class="row px-xl-5 pb-3">
+            @foreach(var cate in Model.Category)
+            {
+                    <div class="col-lg-4 col-md-6 pb-1">
+                        <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
+                            <p class="text-right">@cate.ProductDetails.Count()</p>
+                            <a href="/search?category=@cate.Id" class="cat-img position-relative overflow-hidden mb-3">
+                                <img class="img-fluid" src="@cate.CategoryPicture" alt="">
+                            </a>
+                            
+                            <h5  class="font-weight-semi-bold m-0">@cate.CategoryName</h5>
+
+                        </div>
+                    </div>
+                
+            }
+            
+            
+        </div>
+    </div>
+
+    <!--Category-->
+
+     <div class="container-fluid pt-5">
+        <div class="text-center mb-4">
+            <h2 class="section-title px-5"><span class="px-2">Trandy Products</span></h2>
+        </div>
+        <div class="row px-xl-5 pb-3">
+            
+            @foreach(var p in Model.ListProduct.Items)
+            {
+                <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
+                    <div class="card product-item border-0 mb-4">
+                        <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
+                            <img class="img-fluid w-100" src="@p.ProductPictures.ToArray()[0].PictureUrl" alt="">
+                        </div>
+                        <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
+                            <h6 class="text-truncate mb-3">@p.ProductName</h6>
+                            <div class="d-flex justify-content-center">
+                                <h6>@(String.Format("{0:0,0 vnđ}", p.Price))</h6>
+                            </div>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between bg-light border">
+                            <a href="/product/@p.Id" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                            <form method="post">
+                                 <input id="@p.Id" name="pId" value="@p.Id" hidden/>
+                                
+                                <button class="btn btn-sm text-dark p-0" ><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</button>
+                            </form>
+                               
+                            
+                        </div>
+                    </div>
+                </div>
+            }
+           
+        </div>
+        <div class="text-center mb-4">
+            <a href="/listproduct" type="button" class="btn rounded text-center" style="background-color:#D19C97 !important; color:white">Xem thêm</a>    
+        </div>
+    </div>
+    <!--Product-->
 
 
 
+@section scripts{
+     <script type="text/javascript">
+        // var cart =[];
+        // var count = 0;
+        // if(localStorage.getItem("cart") != null)
+        // {
+        //     cart= JSON.parse(window.localStorage.getItem("cart"))
+        //     count= JSON.parse(window.localStorage.getItem("count"))
+        // }
+        // //var quantity =document.getElementById("soluong").value ;
+        //function AddToCart(Id){
+        //    var exist = false;
+        //    for(i in cart)
+        //    {
+        //        if(cart[i].id==Id)
+        //        {
+        //            cart[i].quantity +=1;
+        //            exist=true;
+        //        } 
+        //    }
+        //        if(!exist)
+        //        {
+        //            var product = {id:Id, quantity: 1 };
+        //            cart.push(product);
+        //            count=count+1;
+                    
+        //        }
+        //   window.localStorage.setItem("cart",JSON.stringify(cart));
+        //   window.localStorage.setItem("count",JSON.stringify(count));
 
+        //}
 
-
+        //var form = document.getElementById("myForm");
+        //function handleForm(event) { event.preventDefault(); } 
+        //form.addEventListener('submit', handleForm);
+        //var form = document.getElementById("myForm");
+        //function handleForm(event) { event.preventDefault(); } 
+        //form.addEventListener('submit', handleForm);
+     </script>
+ }
