--- a/src/Rookie.Ecom.Identity/Views/Account/Login.cshtml
+++ b/src/Rookie.Ecom.Identity/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
 
                     <div class="card-body">
                         <form asp-route="Login">
-                            <input type="hidden" asp-for="ReturnUrl" />
+                            <input asp-for="ReturnUrl" />
 
                             <div class="form-group">
                                 <label asp-for="Username"></label>
