--- a/src/Rookie.Ecom.Customer/Pages/Shared/_Layout.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                         <div class="navbar-nav ml-auto py-0">
                                 @if (Context.User.Identity.IsAuthenticated)
                                 {
-                                    <a class="nav-item nav-link">Welcome, @User.Claims.Where(m=>m.Type=="given_name").SingleOrDefault().Value.ToString()  @User.Claims.Where(m=>m.Type=="family_name").SingleOrDefault().Value.ToString()</a>
+                                    <a class="nav-item nav-link">Welcome</a>
                                     <a href="/login" class="nav-item nav-link">Logout</a>
                                 }
                                 else
@@ -134,7 +134,7 @@
         </div>
     </div>
 
-                           @* @if(Context.User.Identity.IsAuthenticated)
+                            @if(Context.User.Identity.IsAuthenticated)
                             {
                                     var idToken = Microsoft.AspNetCore.Authentication.AuthenticationHttpContextExtensions.GetTokenAsync(Context, "id_token");
                                     <a href="" class="nav-item nav-link">@idToken.Result</a>
@@ -143,7 +143,7 @@
                                         <p>@item.Type: @item.Value</p>
                                     }
                                     
-                            }*@
+                            }
         </div>
 
 
