--- a/src/Rookie.Ecom.Customer/Pages/Index.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Index.cshtml
@@ -90,9 +90,8 @@
                         </div>
                         <div class="card-footer d-flex justify-content-between bg-light border">
                             <a href="/product/@p.Id" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                            <form method="post">
+                            <form method="post"  asp-controller="CartAction" asp-action="AddToCartList">
                                  <input id="@p.Id" name="pId" value="@p.Id" hidden/>
-                                
                                 <button class="btn btn-sm text-dark p-0" ><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</button>
                             </form>
                                
