--- a/src/Rookie.Ecom.Customer/Pages/Product.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Product.cshtml
@@ -27,11 +27,14 @@
                 <h3 class="font-weight-semi-bold">@Model.Product.ProductName</h3>
                 <div class="d-flex mb-3">
                     <div class="text-primary mr-2">
-                        <small class="fas fa-star"></small>
-                        <small class="fas fa-star"></small>
-                        <small class="fas fa-star"></small>
-                        <small class="fas fa-star-half-alt"></small>
-                        <small class="far fa-star"></small>
+                        @for (var i = 1; i <= @Model.Rating.Select(m=>m.Rate).Average(); i++)
+                        {
+                                <i class="fas fa-star"></i>                                                    
+                        }
+                        @for (var i = (@Model.Rating.Select(m=>m.Rate).Average() + 1); i <= 5; i++)
+                        {
+                            <i class="far fa-star"></i>                                                    
+                        }                               
                     </div>
                 @if (Model.Product.Ratings.Count() == 0)
                 {
@@ -44,24 +47,27 @@
 
                 </div>
                 <h3 class="font-weight-semi-bold mb-4">@(String.Format("{0:0,0 VNĐ}", Model.Product.Price))</h3>
-
+                <form method="post" asp-controller="CartAction" asp-action="AddToCartItem">
                 <div class="d-flex align-items-center mb-4 pt-2">
+                    
                     <div class="input-group quantity mr-3" style="width: 130px;">
                         <div class="input-group-btn">
-                            <button class="btn btn-primary btn-minus" >
+                            <button class="btn btn-primary btn-minus" type="button" >
                             <i class="fa fa-minus"></i>
                             </button>
                         </div>
-                        <input type="text" class="form-control bg-secondary text-center" id="soluong" value="1">
+                        <input type="text" class="form-control bg-secondary text-center" name="soluong" value="1">
                         <div class="input-group-btn">
-                            <button class="btn btn-primary btn-plus">
+                            <button class="btn btn-primary btn-plus" type="button">
                                 <i class="fa fa-plus"></i>
                             </button>
                         </div>
                     </div>
-                    <button class="btn btn-primary px-3" onclick="AddToCart()"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
+                    <input id="@Model.Id" name="pId" value="@Model.Id" hidden/>
+                    <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
                 </div>
-                @*<div class="d-flex pt-2">
+                </form>
+                <div class="d-flex pt-2">
                     <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
                     <div class="d-inline-flex">
                         <a class="text-dark px-2" href="">
@@ -77,14 +83,14 @@
                             <i class="fab fa-pinterest"></i>
                         </a>
                     </div>
-                </div>*@
+                </div>
             </div>
         </div>
         <div class="row px-xl-5">
             <div class="col">
                 <div class="nav nav-tabs justify-content-center border-secondary mb-4">
                     <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1">Description</a>
-                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-3">Reviews (0)</a>
+                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-3">Reviews (@Model.Rating.Count())</a>
                 </div>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="tab-pane-1">
@@ -94,54 +100,53 @@
 
                     <div class="tab-pane fade" id="tab-pane-3">
                         <div class="row">
-                            <div class="col-md-6">
-                                <h4 class="mb-4">1 review for "Colorful Stylish Shirt"</h4>
-                                <div class="media mb-4">
-                                    <img src="img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
-                                    <div class="media-body">
-                                        <h6>John Doe<small> - <i>01 Jan 2045</i></small></h6>
-                                        <div class="text-primary mb-2">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half-alt"></i>
-                                            <i class="far fa-star"></i>
+                            <div class="col-md-6 pre-scrollable" style="max-height:500px; overflow:auto">
+                                    <h4 class="mb-4">@Model.Rating.Count() Reviews for "@Model.Product.ProductName"</h4>
+                                    @foreach(var rate in Model.Rating)
+                                    {
+                                        <div class="media mb-4">
+                                            <div class="media-body">
+                                                <h6>@rate.User.FirstName @rate.User.LastName<small> - <i>@rate.CreatedDate.ToString("dd/MM/yyyy")</i></small></h6>
+                                                    <div class="text-primary mb-2">
+                                                        @for (var i = 1; i <= rate.Rate; i++)
+                                                        {
+                                                                <i class="fas fa-star"></i>                                                    
+                                                        }
+                                                        @for (var i = (rate.Rate + 1); i <= 5; i++)
+                                                        {
+                                                            <i class="far fa-star"></i>                                                    
+                                                        }                                              
+                                                    </div>
+                                                <p>@rate.Comment</p>
+                                            </div>
                                         </div>
-                                        <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum.</p>
-                                    </div>
+                                    }
                                 </div>
-                            </div>
-                            @*<div class="col-md-6">
+                            
+                            <div class="col-md-6">
                                 <h4 class="mb-4">Leave a review</h4>
-                                <small>Your email address will not be published. Required fields are marked *</small>
-                                <div class="d-flex my-3">
-                                    <p class="mb-0 mr-2">Your Rating * :</p>
-                                    <div class="text-primary">
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
+                                <form method="post" asp-controller="Rating" asp-action="Index" >
+                                    <div class="d-flex my-3">
+                                        <p class="mb-0 mr-2">Your Rating * :</p>
+                                        <div class="text-primary">
+                                            <a type="radio" onclick="CRate(1)"  class="ratingStar fas fa-star" value="1"></a>
+                                            <a type="radio" onclick="CRate(2)" class="ratingStar fas fa-star" value="2"></a>
+                                            <a type="radio" onclick="CRate(3)" class="ratingStar fas fa-star" value="3"></a>
+                                            <a type="radio" onclick="CRate(4)" class="ratingStar fas fa-star" value="4"></a>
+                                            <a type="radio" onclick="CRate(5)" class="ratingStar fas fa-star" value="5"></a>
+                                        </div>
                                     </div>
-                                </div>
-                                <form>
                                     <div class="form-group">
                                         <label for="message">Your Review *</label>
-                                        <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="name">Your Name *</label>
-                                        <input type="text" class="form-control" id="name">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="email">Your Email *</label>
-                                        <input type="email" class="form-control" id="email">
+                                        <textarea id="message" name="comment" cols="30" rows="5" class="form-control"></textarea>
                                     </div>
                                     <div class="form-group mb-0">
+                                        <input id="Rating" name="rating" value="5" hidden/>
+                                        <input name="productId" value="@Model.Id" hidden/>
                                         <input type="submit" value="Leave Your Review" class="btn btn-primary px-3">
                                     </div>
                                 </form>
-                            </div>*@
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -241,36 +246,16 @@
     </div>
 
 @section scripts{
-     <script type="text/javascript">
-         var cart =[];
-         var count = 0;
-         if(localStorage.getItem("cart") != null)
-         {
-             cart= JSON.parse(window.localStorage.getItem("cart"))
-             count= JSON.parse(window.localStorage.getItem("count"))
-         }
-         //var quantity =document.getElementById("soluong").value ;
-        function AddToCart(Id){
-            var exist = false;
-            for(i in cart)
-            {
-                if(cart[i].id==Id)
-                {
-                    cart[i].quantity +=1;
-                    exist=true;
-                } 
-            }
-                if(!exist)
-                {
-                    var product = {id:Id, quantity: 1 };
-                    cart.push(product);
-                    count=count+1;
-                    
-                }
-           window.localStorage.setItem("cart",JSON.stringify(cart));
-           window.localStorage.setItem("count",JSON.stringify(count));
+    <script>
+    $(".ratingStar").hover(function () {
+        $(".ratingStar").addClass("far").removeClass("fas");
 
-        }
-
-     </script>
+        $(this).addClass("fas").removeClass("far");
+        $(this).prevAll(".ratingStar").addClass("fas").removeClass("far");
+    });
+    function CRate(r) {
+        $("#Rating").val(r);
+        
+    }
+</script>
  }
