--- a/src/Rookie.Ecom.Customer/Pages/Search.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Search.cshtml
@@ -134,7 +134,10 @@
                                             </div>
                                             <div class="card-footer d-flex justify-content-between bg-light border">
                                                 <a href="/product/@p.Id" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                                                <a  onclick='AddToCart("@p.Id")' class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                                                <form method="post"  asp-controller="CartAction" asp-action="AddToCartList">
+                                                     <input id="@p.Id" name="pId" value="@p.Id" hidden/>
+                                                    <button class="btn btn-sm text-dark p-0" ><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</button>
+                                                </form>                                            
                                             </div>
                                         </div>
                                     </div>
