--- a/src/Rookie.Ecom.Customer/Pages/Search.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Search.cshtml
@@ -124,7 +124,7 @@
                                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                                         <div class="card product-item border-0 mb-4">
                                             <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-2">
-                                                <img class="img-fluid w-100" src="https://localhost:5011/Picture/@p.ProductPictures.ToArray()[0].PictureUrl" alt="">
+                                                <img class="img-fluid w-100" style="height:200px" src="https://localhost:5011/Picture/@p.ProductPictures.ToArray()[0].PictureUrl" alt="">
                                             </div>
                                             <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                                                 <h6 class="text-truncate mb-3">@p.ProductName</h6>
