--- a/src/Rookie.Ecom.Identity/Views/Account/Register.cshtml
+++ b/src/Rookie.Ecom.Identity/Views/Account/Register.cshtml
@@ -2,8 +2,7 @@
 
 <div class="login-page">
     <div class="lead">
-        <h1>Login</h1>
-        <p>Choose how to login</p>
+        <h1>Register</h1>
     </div>
 
     <partial name="_ValidationSummary" />
@@ -12,9 +11,6 @@
 
             <div class="col-sm-6">
                 <div class="card">
-                    <div class="card-header">
-                        <h2>Local Account</h2>
-                    </div>
 
                     <div class="card-body">
                         <form  asp-controller="Account" asp-action="Register" method="post">
